[package]
name = "bytecrypt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
rsa = "0.9.6"
rand = "0.8.5"
rpassword = "7.3.1"
sha2 = "0.10.8"
serde ={version = "1",features = ["derive"]}
termion = "3.0.0"
whoami = "1.5.1"

[profile.release]
opt-level = 3
